--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to Jugal Kishore Website</h1>  
+        <h1>Welcome to Jugal Kishore Website </h1>  
+        <div>Chnage 1</div>
+        <div>Chnage 2</div>
     </main>
   </body>
 </html>
